--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@
     <button class="btn btn-primary">Login</button>
 
 </form>
-<p>Dont have and account? <a href="{%url 'register' %}">
-    Register here
+<p>Login <a href="{%url 'login' %}">
+    Login here
 </a></p>
 {% endblock %}
