--- a/tweet/templates/index.html
+++ b/tweet/templates/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 {% extends "layout.html" %}
 
 {% block title %}
@@ -6,17 +5,6 @@ Chai aur Tweet
 {% endblock %}c
 
 {% block content %}
-<h1 class="text-center  ">Welcome to chai's Django project</h1>
+<h1 class="  ">Welcome to Rohit's Django project</h1>
 
-=======
-{% extends "layout.html" %}
-
-{% block title %}
-Chai aur Tweet
-{% endblock %}c
-
-{% block content %}
-<h1 class="text-center  ">Welcome to chai's Django project</h1>
-
->>>>>>> 14017d2bbaae25a87c56997de74d4558383982d3
 {% endblock %}
